custom scrollbar - need to fixed and make better

--- a/src/app/component/dashboard/task/task.component.scss
+++ b/src/app/component/dashboard/task/task.component.scss
@@ -217,3 +217,8 @@ kendo-scheduler .k-event {
 
   height: 300px;
 }
+
+.overflowHide {
+  overflow: hidden !important;
+  padding-right: 18px !important;
+}
